fix bug deploy jdk java 8